= Changes for feram
== 0.17.01
 * coord_module.F: inhomo_K_G(:,:, :,:,:),
   inhomo_K = G tG, where G is a lower triangular matrix and tG is transpose of G. G(i,4) = 1/G(i,i).

== 0.17.00
 * verbose tag.

== 0.16.01 (public release)
 * Use foo.localfield file instead of local.field.

 * You can use both foo123 and foo123.feram for the input parameter file.

== 0.15.01 (public release)
 * README.ja, a Japanese document is ready.

 * feram_mpi.F, MPI job parallel. You can "make feram_mpi".

 * feram does not read from stdin anymore.

 * Log goes to foo.log, not to stdout anymore.

== 0.14.06 (private release)
 * New tag seed, two integers for Marsaglia-Tsang 64-bit uiniversal RNG (random number generator).
   Now, we start to use built-in RNG. "feram foo bar" and "feram bar foo" must have same results.

 * In src/fft.F, HZFT7M() is replaced with HDFZ7M() and HZFD7M() for SR11000.
   ipara = $NUMTHRD() is also employed.

 * src/eigenvalues2j.F
   incorrect: call write_kappa2_and_j_i('     j_1 =', b(0))
   correct:   call write_kappa2_and_j_i('     j_1 =', b(1))

 * src/feram.F
   SR11000 can also use iargc() and getarg().
   We do not need FILES file for SR11000 anymore!

 * dVddi-unharmonic.F and energy_module.F
   Add PSUM() directives for SR11000.

 * Start to write Changes.

== 0.13.05 (public release)